add styling to center content

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,9 @@
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .showcase-video {
     position: absolute;
     top: 0;
