--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -3,3 +3,9 @@
     justify-content: center;
     align-items: center;
 }
+
+.header-container {
+    display: flex;
+    justify-content: center;
+    left: 50%;
+}
