--- a/src/components/BlogPost/BlogPost.css
+++ b/src/components/BlogPost/BlogPost.css
@@ -5,5 +5,7 @@
 }
 
 .blog-post-header-container {
-    justify-content: right;
+    display: flex; 
+    margin-left: auto; 
+    margin-right: 0;    
 }
