--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,3 +4,14 @@
     align-items: center;
     
 }
+
+.showcase-media {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.8;
+    z-index: -1;
+}
