avatar position and text responsive

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -4,3 +4,17 @@
     transform: translateY(-50%);
 }
 
+.avatar-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+
+    
+}
+
+.about-position {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
