--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -8,9 +8,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-size: cover;
     overflow: hidden;
-
-    
+    position: relative;
 }
 
 .about-position {
