--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -8,7 +8,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: fit-content;
+    position: relative;
+    
 }
 
 .about-position {
