nest data items as an unordered list

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,3 +2,9 @@
     display: flex;
     justify-content: center;
 }
+
+.data-items {
+    display: list-item;
+    margin-left: 4%;
+    list-style-type: disc;
+}
