--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -7,5 +7,6 @@
 .header-container {
     display: flex;
     justify-content: center;
-    left: 50%;
+    align-items: center;
+    margin-left: 10%;
 }
